InternexDev_Sandbox/src/objects/Cheque_Invoice_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Transaction__r.akritiv__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_Balance__c</fullName>
        <label>Applied Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque__c</fullName>
        <label>Cheque</label>
        <referenceTo>Cheque__c</referenceTo>
        <relationshipLabel>Cheque Invoice Matrix</relationshipLabel>
        <relationshipName>Cheque_Invoice_Matrix1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <formula>Transaction__r.akritiv__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Balance__c</fullName>
        <formula>Transaction__r.akritiv__Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice  Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Days_Past_Due__c</fullName>
        <formula>Transaction__r.akritiv__Days_Past_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <formula>Transaction__r.akritiv__Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDC_Amount__c</fullName>
        <formula>Applied_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDC_Bank_Name__c</fullName>
        <formula>If((NOT(ISNULL(Cheque__c))), Cheque__r.Bank_Name__c,&apos;&apos;)</formula>
        <label>PDC Bank Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDC_Date__c</fullName>
        <formula>If((NOT(ISNULL(Cheque__c))), Cheque__r.Cheque_Due_Date__c,null)</formula>
        <label>PDC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDC_Received__c</fullName>
        <formula>If((NOT(ISNULL(Cheque__c))),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDC Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDC__c</fullName>
        <formula>If((NOT(ISNULL(Cheque__c))), Cheque__r.Name,&apos;&apos;)</formula>
        <label>PDC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <formula>Transaction__r.akritiv__Account__r.Sales_District_Non_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>akritiv__Transaction__c</referenceTo>
        <relationshipLabel>Cheque Invoice Matrix</relationshipLabel>
        <relationshipName>Cheque_Invoice_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cheque Invoice Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Chk - INV - {000000}</displayFormat>
        <label>Cheque Invoice Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cheque Invoice Matrix</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>